bk_ida/gccida/g0/build_def_use
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1225:1: error: must use 'enum' tag to refer to type 'op_type'
op_type type; // [rsp+128h] [rbp-88h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1226:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa; // [rsp+12Ch] [rbp-84h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1230:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class class_0; // [rsp+144h] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1233:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class class_1; // [rsp+15Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1262:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_ops = recog_data_0.n_operands; 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1269:73: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( matches >= 0 || recog_op_alt[i][alt].matched >= 0 || predicated && recog_data_0.operand_type[i] == OP_OUT ) 
                                                                        ^~~~~~~~~~~~
                                                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1270:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_type[i] = OP_INOUT; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1275:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_loc[i], 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1278:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_type[i], 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1282:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
old_operands[i] = recog_data_0.operand[i]; 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1283:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( *recog_data_0.constraints[i] ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1284:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.operand_loc[i] = global_rtl[1]; 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1286:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_dups; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1288:11: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
dup_num = recog_data_0.dup_num[i]; 
          ^~~~~~~~~~~~
          recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1289:16: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
old_dups[i] = *recog_data_0.dup_loc[i]; 
               ^~~~~~~~~~~~
               recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1290:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[i] = global_rtl[1]; 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1291:21: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( icode >= 0 && !insn_data_0[icode].operand[dup_num].eliminable ) 
                    ^~~~~~~~~~~
                    insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1292:15: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
old_dups[i] = recog_data_0.operand[dup_num]; 
              ^~~~~~~~~~~~
              recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/regrename.c:1295:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_dups; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_def_use/src/obj/regrename.o] Error 1
